Wed Mar  5 15:56:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arg_asgn): define optional arguments as argument
	  variables in the rhs default expressions.
	  [ruby-core:61299] [Bug #9593]

Wed Mar  5 11:58:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl.c (ossl_make_error): check NULL for unknown
	  error reasons with old OpenSSL, and insert a colon iff formatted
	  message is not empty.

Wed Mar  5 00:42:00 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/pathname/lib/pathname.rb (Pathname#find): add "ignore_error"
	  keyword argument defaulted to true as well as Find#find.

Tue Mar  4 23:00:18 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_eval.rb (TestEval#make_test_binding): renamed.
	  it's not test method.

Tue Mar  4 20:50:59 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* st.c (st_foreach): fix type of hash. not st_data_t but st_index_t.

Tue Mar  4 19:41:40 2014  Tanaka Akira  <akr@fsij.org>

	* Makefile.in: ".DEFAULT" target removed because it is not for
	  specifying default target.

Tue Mar  4 00:25:35 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/find.rb (Find#find): should pass ignore_error option to enumerators.

Mon Mar  3 13:27:35 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/test_find.rb (TestFind#test_unsearchable_dir): ruby cannot make
	  directory unreachable by owner on Windows.

Mon Mar  3 08:10:04 2014  Eric Wong  <e@80x24.org>

	* vm_method.c (rb_method_entry_get_without_cache): disable GMC
	  writing if GMC is disabled.
	  [ruby-core:61218]

Mon Mar  3 07:47:17 2014  Eric Wong  <e@80x24.org>

	* README.EXT: wrap GetDBM with do/while(0)
	* README.EXT.ja: ditto
	* ext/dbm/dbm.c: ditto, likewise for GetDBM2
	* ext/gdbm/gdbm.c: ditto
	* ext/sdbm/init.c: ditto
	  [ruby-core:61217]

Mon Mar  3 07:17:31 2014  Zachary Scott  <e@zzak.io>

	* NEWS: [DOC] Update doc regarding filesystem load when flushing IO

Mon Mar  3 04:37:50 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
